fix some layouts on mobile pages

--- a/src/webapp/static/add.css
+++ b/src/webapp/static/add.css
@@ -19,6 +19,7 @@ body {
     border-radius: 10px;
     padding: 20px;
     text-align: center;
+    max-width: 80vw;
 }
 
 .add-box input[type="url"],
@@ -26,6 +27,7 @@ body {
 .add-box button {
     display: block;
     width: 400px;
+    max-width: 90%;
     height: 40px;
     margin: 10px auto;
     padding: 5px 10px;
