--- a/src/webapp/static/login.css
+++ b/src/webapp/static/login.css
@@ -19,12 +19,14 @@ body {
     border-radius: 10px;
     padding: 20px;
     text-align: center;
+    max-width: 80vw;
 }
 
 .login-box input[type="password"],
 .login-box button {
     display: block;
     width: 200px;
+    max-width: 90%;
     height: 40px;
     margin: 10px auto;
     padding: 5px 10px;
